# staki-backend

./: .env.docker  .env.example  .env.local  .gitignore  CHANGELOG.md  Cargo.toml  POSTMAN_GUIDE.md  README.md  Staki_Backend_API.postman_collection.json  Staki_Local.postman_environment.json  docker-compose.yml
.claude/: settings.local.json
api-gateway/: .gitignore  Cargo.toml  Dockerfile
api-gateway/src/: config.rs  main.rs
api-gateway/src/middleware/: auth.rs
api-gateway/src/routes/: auth.rs  mod.rs
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: config.rs  main.rs
auth-service/src/handlers/: login.rs  me.rs  mod.rs  register.rs
auth-service/src/models/: user.rs
auth-service/src/services/: auth.rs  mod.rs
messaging-service/: .gitignore  Cargo.toml  Dockerfile  README.md
messaging-service/src/: config.rs  main.rs
messaging-service/src/handlers/: conversation.rs  messaging.rs
messaging-service/src/models/: conversation.rs  message.rs
messaging-service/src/services/: conversation.rs  messaging.rs  mod.rs
shared/: .gitignore  Cargo.toml
shared/src/: jwt.rs  lib.rs  token.rs
social-service/: .gitignore  Cargo.toml  Dockerfile
social-service/src/: config.rs  lib.rs  main.rs
social-service/src/handlers/: post.rs
social-service/src/models/: post.rs
social-service/src/services/: post.rs
social-service/tests/: post_handler_tests.rs
