[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Database
mongodb = "3.1"
bson = "2.15"

# Auth & Security
bcrypt = "0.17.1"

# Serialization
serde = { version = "1", features = ["derive"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Shared
shared = { path = "../shared" }
