[package]
name = "social-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "social_service"
path = "src/lib.rs"

[[bin]]
name = "social-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

mongodb = "3.1"
bson = "2.15"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

tracing-subscriber = "0.3"

shared = { path = "../shared" }

anyhow = "1"
futures = "0.3"
deadpool-redis = "0.13"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
tokio-test = "0.4"